--- a/Administrador/src/app/components/header/header.component.html
+++ b/Administrador/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
         </a>
         <h4 class="titulo-sistema ">{{nombreSistema}}</h4>
         <div class="navbar-expand ml-auto navbar-nav align-items-center">
-            <div class="navbar-nav align-items-center" matTooltip="Abrir men&uacute;" [matMenuTriggerFor]="menu">
+            <div class="navbar-nav align-items-center contenedor-sesion" matTooltip="Abrir men&uacute;" [matMenuTriggerFor]="menu">
                 <span class="mr-2 nombre-usuario">mdominguez</span>
                 <button color="primary" mat-mini-fab aria-label="Icono ed usuario">
                     <mat-icon>person</mat-icon>
