--- a/Administrador/src/app/components/home/home.component.html
+++ b/Administrador/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center row justify-content-center">
+<div class="container-fluid text-center row justify-content-center flex-column align-items-center">
     <h5 class="col-12 mb-5">BIENVENIDO(A) MARIO EDUARDO DOMINGUEZ MELENDEZ</h5>
     <img src="./assets/img/logo.png" width="300px">
     <hr />
