Maquetado admin repartidores

--- a/Administrador/src/app/management/components/menu/menu.component.html
+++ b/Administrador/src/app/management/components/menu/menu.component.html
@@ -95,10 +95,10 @@
       </li>
     </div>
 
-    <a [routerLink]="['ayuda']" [routerLinkActive]="['router-link-active']" (click)="addExpandClass('0')"
+    <!-- <a [routerLink]="['ayuda']" [routerLinkActive]="['router-link-active']" (click)="addExpandClass('0')"
       class="list-group-item" matTooltip="Ayuda" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
       &nbsp;<i class="fas fa-question"></i> &nbsp;
       <span>Ayuda</span>
-    </a>
+    </a> -->
   </div>
 </nav>
