--- a/Administrador/src/app/management/components/repartidor-add/repartidor-add.component.html
+++ b/Administrador/src/app/management/components/repartidor-add/repartidor-add.component.html
@@ -1,1 +1,178 @@
-<p>repartidor-add works!</p>
+<div class="container-fluid">
+  <div class="card  mat-elevation-z4">
+    <div class="card-header primary-color text-white ">
+      {{tituloTipoOperacion}} repartidor
+    </div>
+    <div class="card-body">
+      <form [formGroup]="form" (ngSubmit)="guardar()" novalidate>
+        <div class="row">
+
+          <div class="form-group col-sm-12 col-md-6 col-sm-12" *ngIf="!isDisabled">
+            <mat-form-field>
+              <ngx-mat-file-input #removableInput formControlName="file" placeholder="Selecciona imagen de repartidor"
+                [accept]="'.png, .jpg, .jpeg, .svg'" (change)="cambiaImagen()" required>
+              </ngx-mat-file-input>
+              <button mat-icon-button matSuffix *ngIf="!removableInput.empty"
+                (click)="removableInput.clear($event);cambiaImagen()">
+                <mat-icon>clear</mat-icon>
+              </button>
+              <!-- <mat-error *ngIf="form.get('file').hasError('required')">
+                Por favor seleccione una imagen
+              </mat-error> -->
+              <mat-error *ngIf="form.get('file').hasError('maxContentSize')">
+                El tamaño total permitido se excede
+                {{form.get('file')?.getError('maxContentSize').maxSize | byteFormat}} ({{form.get('file')?.getError('maxContentSize').actualSize
+                                    | byteFormat}}).
+              </mat-error>
+            </mat-form-field>
+            <blockquote class="col-12">
+              <footer class="blockquote-footer text-info">Tamaño m&aacute;ximo 10 megas. </footer>
+              <footer class="blockquote-footer text-info">Formatos aceptados: .png, .jpg, .jpeg, .svg
+              </footer>
+              <!--footer class="blockquote-footer text-info">Resoluci&oacute;n aceptada (excepto .svg): 200 x
+                                200</footer>-->
+            </blockquote>
+          </div>
+          <div class="form-group col-sm-12 col-md-6">
+            <!-- <img src="" #imgPreview class="img-thumbnail mx-auto d-block" width="400px" *ngIf="form.get('file').value"/> -->
+            <img src="./assets/img/profile.png" #imgPreview class="img-profile mx-auto d-block" width="400px" />
+            <!-- <h4 *ngIf="!form.get('file').value">Ninguna imagen seleccionada</h4> -->
+          </div>
+
+          <div class="form-group col-sm-12 col-md-8">
+            <mat-form-field>
+              <input matInput placeholder="Nombre completo" formControlName="frmNombre" maxlength="250" required>
+              <mat-error *ngIf="form.get('frmNombre').hasError('required')">
+                Ingrese un nombre
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-4">
+            <mat-form-field>
+              <mat-label>Tipo repartidor</mat-label>
+              <mat-select required formControlName="cmbTipoRepartidor">
+                <mat-option *ngFor="let tipoRepartidor of comboTipoRepartidor" [value]="tipoRepartidor.Clave">
+                  {{tipoRepartidor.Nombre}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="form.get('cmbTipoRepartidor').hasError('required')">
+                Ingrese un valor
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-6">
+            <mat-form-field>
+              <input matInput placeholder="Colonia" formControlName="frmColonia" maxlength="250" required>
+              <mat-error *ngIf="form.get('frmColonia').hasError('required')">
+                Ingrese una colonia
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-6">
+            <mat-form-field>
+              <input matInput placeholder="Calle" formControlName="frmCalle" maxlength="250" required>
+              <mat-error *ngIf="form.get('frmCalle').hasError('required')">
+                Ingrese una calle
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-3">
+            <mat-form-field>
+              <input matInput placeholder="No. Ext" formControlName="frmNoExt" maxlength="10" required>
+              <mat-error *ngIf="form.get('frmNoExt').hasError('required')">
+                Ingrese un n&uacute;mero exterior.
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-3">
+            <mat-form-field>
+              <input matInput placeholder="No. Int" formControlName="frmNoInt" maxlength="10">
+              <!-- <mat-error *ngIf="form.get('frmNoExt').hasError('required')">
+                Ingrese un n&uacute;mero exterior.
+              </mat-error> -->
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-4">
+            <mat-form-field>
+              <input type="tel" matInput placeholder="Tel&eacute;fono" formControlName="frmTelefono" maxlength="10"
+                required>
+              <mat-error *ngIf="form.get('frmTelefono').hasError('required')">
+                Ingrese un n&uacute;mero de tel&eacute;fono.
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-2">
+            <mat-form-field>
+              <mat-label>Sexo</mat-label>
+              <mat-select required formControlName="cmbSexo">
+                <mat-option *ngFor="let sexo of comboSexo" [value]="sexo.Clave">
+                  {{sexo.Nombre}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="form.get('cmbSexo').hasError('required')">
+                Ingrese un valor
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-5">
+            <mat-form-field>
+              <input type="email" matInput placeholder="Email" formControlName="frmEmail" maxlength="100" required>
+              <mat-error *ngIf="form.get('frmEmail').hasError('required')">
+                Ingrese un correo electr&oacute;nico.
+              </mat-error>
+              <mat-error *ngIf="form.get('frmEmail').hasError('email')">
+                Ingrese un correo electr&oacute;nico v&aacute;lido.
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-4">
+            <mat-form-field>
+              <input matInput placeholder="No. Placas" formControlName="frmNoPlacas" maxlength="10" required>
+              <mat-error *ngIf="form.get('frmNoPlacas').hasError('required')">
+                Ingrese un n&uacute;mero de placas.
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group col-sm-12 col-md-3">
+            <mat-form-field>
+              <input matInput placeholder="No. Licencia" formControlName="frmNoLicencia" maxlength="20" required>
+              <mat-error *ngIf="form.get('frmNoLicencia').hasError('required')">
+                Ingrese un n&uacute;mero de licencia.
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+
+          <!-- <div class="form-group col-sm-12">
+            <mat-form-field>
+              <textarea matInput rows="5" placeholder="Descripci&oacute;n" formControlName="frmDescripcion"
+                maxlength="250" required>
+                                </textarea>
+              <mat-error *ngIf="form.get('frmDescripcion').hasError('required')">
+                Ingrese descripci&oacute;n
+              </mat-error>
+            </mat-form-field>
+          </div> -->
+
+          <div class="form-group col" *ngIf="!isDisabled">
+            <button type="submit" mat-raised-button class="btn-block primary-color" color="primary">Guardar</button>
+          </div>
+
+          <div class="form-group col">
+            <button type="button" mat-raised-button class="btn-block primary-color" (click)="goBack()"
+              color="primary">Regresar</button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <!--Fin panel card-body-->
+  </div>
+</div>
