Consulta detalle pedido

--- a/Administrador/src/app/management/components/local/local.component.html
+++ b/Administrador/src/app/management/components/local/local.component.html
@@ -49,6 +49,9 @@
             <td mat-cell *matCellDef="let element"> {{element.Colonia}} </td>
           </ng-container>
 
+
+          <!-- <mat-text-column name="Colonia" ></mat-text-column> -->
+
           <ng-container matColumnDef="estatus">
             <th mat-header-cell *matHeaderCellDef mat-sort-header width="5%" class="text-center"> Activo </th>
             <td mat-cell *matCellDef="let element" class="text-center">
