--- a/Administrador/src/app/management/components/pedidos/pedidos.component.html
+++ b/Administrador/src/app/management/components/pedidos/pedidos.component.html
@@ -94,7 +94,7 @@
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef class="text-center" width="15%"> Acciones </th>
             <td mat-cell *matCellDef="let element" class="text-center">
-              <a routerLink="/admin-dashboard/administracion/productos/{{element.IdProducto}}"
+              <a routerLink="/admin-dashboard/pedidos/{{element.IdPedido}}"
                 [queryParams]="{ to: 'c'}">
                 <mat-icon aria-hidden="false" aria-label="Consultar" matTooltip="Consultar">search</mat-icon>
               </a>
