--- a/Administrador/src/app/management/components/repartidor/repartidor.component.html
+++ b/Administrador/src/app/management/components/repartidor/repartidor.component.html
@@ -3,15 +3,15 @@
     <mat-toolbar-row>
       <span> Repartidores </span>
       <span class="spacer-toolbar"></span>
-      <!-- <button mat-icon-button aria-label="Limpia filtros grid" (click)="clearFilter()" matTooltip="Limpiar los filtros de busqueda">
+       <!-- <button mat-icon-button aria-label="Limpia filtros grid" (click)="clearFilter()" matTooltip="Limpiar los filtros de busqueda">
             <span class="custom-size-icon-toolbar"><i class="fas fa-brush"></i></span>
-        </button>
-        <button mat-icon-button aria-label="Actualiza grid" (click)="reLoadGridPage()" matTooltip="Actualiza datos">
+        </button> -->
+        <button mat-icon-button aria-label="Actualiza grid" (click)="getRepartidores()" matTooltip="Actualiza datos">
             <mat-icon>refresh</mat-icon>
         </button>
-        <button mat-icon-button aria-label="Exportar excel" (click)="exportDataExcel()" matTooltip="Exportar a excel">
+        <!-- <button mat-icon-button aria-label="Exportar excel" (click)="exportDataExcel()" matTooltip="Exportar a excel">
             <span class="custom-size-icon-toolbar"><i class="far fa-file-excel"></i></span>
-        </button> -->
+        </button>  -->
       <button mat-icon-button aria-label="Ir atr&aacute;s" (click)="goBack()" matTooltip="Regresar a p&aacute;gina anterior">
         <mat-icon>arrow_back</mat-icon>
       </button>
@@ -27,6 +27,10 @@
         </mat-form-field>
         <table mat-table matSort [dataSource]="dataSource">
 
+          <ng-container matColumnDef="Fotografia">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header width="8%"  class="text-center"> Fotograf&iacute;a</th>
+            <td mat-cell *matCellDef="let element"> <img class="img-fluid img-thumbnail rounded" src="{{element.Fotografia}}" alt="Imagen perfil conductor"/>  </td>
+          </ng-container>
           <!-- Name Column -->
           <ng-container matColumnDef="Nombre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre</th>
