--- a/Administrador/src/app/management/components/repartidor/repartidor.component.scss
+++ b/Administrador/src/app/management/components/repartidor/repartidor.component.scss
@@ -1,45 +1,51 @@
 /****************************************************************************************
         $IMPORTS
 ****************************************************************************************/
-@import '../../../../colors.scss';
+@import "../../../../colors.scss";
 
 /****************************************************************************************
         $GENERALES
 ****************************************************************************************/
 table {
-    width: 100%;
+  width: 100%;
 }
 
 a > mat-icon {
-    color: $primary-color  !important;
-    &:hover {
-      -webkit-transform: scale(1.3);
-      -ms-transform: scale(1.3);
-      transform: scale(1.3);
-    }
+  color: $primary-color !important;
+  &:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
   }
+}
 
-  td {
-    a {
-      font-size: 30px !important;
-      padding: 5px !important;
-    }
-    &.mat-cell, &.mat-footer-cell {
-      /*padding: 10px!important;*/
-      text-align: left;
-    }
+td {
+  a {
+    font-size: 30px !important;
+    padding: 5px !important;
   }
-
-  th.mat-header-cell {
+  &.mat-cell,
+  &.mat-footer-cell {
     /*padding: 10px!important;*/
     text-align: left;
   }
+  img {
+    height: 50px !important;
+    border-radius: 25px !important;
+    width: 50px;
+  }
+}
+
+th.mat-header-cell {
+  /*padding: 10px!important;*/
+  text-align: left;
+}
 
 /****************************************************************************************
         $CLASES
 ****************************************************************************************/
 .card-header {
-    background-color: $primary-color;
+  background-color: $primary-color;
 }
 
 .mat-row:hover {
