--- a/Administrador/src/app/management/components/local-add/local-add.component.scss
+++ b/Administrador/src/app/management/components/local-add/local-add.component.scss
@@ -20,3 +20,12 @@ agm-map {
     width: 100%;
 }
 
+.icono-persona{
+        height: 40px;
+        width: 40px;
+        border-radius: 20px;
+        margin-right: 35px;
+        border: 1px dashed;
+}
+
+
