--- a/Administrador/src/app/management/components/menu/menu.component.html
+++ b/Administrador/src/app/management/components/menu/menu.component.html
@@ -16,6 +16,14 @@
               <span>Locales</span>
             </a>
           </li>
+
+          <li>
+            <a [routerLink]="['administracion/usuarios']" [routerLinkActive]="['router-link-active']"
+              matTooltip="Administraci&oacute;n de usuarios" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
+              <i class="fas fa-users"></i>
+              <span>Usuarios</span>
+            </a>
+          </li>
           <!-- <li>
             <a [routerLink]="['administracion/productos']" [routerLinkActive]="['router-link-active']"
               matTooltip="Administraci&oacute;n de productos" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
