--- a/Administrador/src/app/management/components/usuarios/usuarios.component.html
+++ b/Administrador/src/app/management/components/usuarios/usuarios.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span> Repartidores </span>
+      <span> Usuarios de sistema </span>
       <span class="spacer-toolbar"></span>
        <!-- <button mat-icon-button aria-label="Limpia filtros grid" (click)="clearFilter()" matTooltip="Limpiar los filtros de busqueda">
             <span class="custom-size-icon-toolbar"><i class="fas fa-brush"></i></span>
         </button> -->
-        <button mat-icon-button aria-label="Actualiza grid" (click)="getRepartidores()" matTooltip="Actualiza datos">
+        <button mat-icon-button aria-label="Actualiza grid" (click)="getUsuarios()" matTooltip="Actualiza datos">
             <mat-icon>refresh</mat-icon>
         </button>
         <!-- <button mat-icon-button aria-label="Exportar excel" (click)="exportDataExcel()" matTooltip="Exportar a excel">
@@ -54,11 +54,11 @@
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef width="10%" class="text-center"> Acciones </th>
             <td mat-cell *matCellDef="let element" class="text-center">
-              <a routerLink="/admin-dashboard/administracion/repartidor/{{element.IdPersona}}"
+              <a routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}"
                 [queryParams]="{ to: 'c'}">
                 <mat-icon aria-hidden="false" aria-label="Consultar" matTooltip="Consultar">search</mat-icon>
               </a>
-              <a *ngIf="element.Estatus" routerLink="/admin-dashboard/administracion/repartidor/{{element.IdPersona}}"
+              <a *ngIf="element.Estatus" routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}"
                 [queryParams]="{ to: 'e'}">
                 <mat-icon aria-hidden="false" aria-label="Editar" matTooltip="Editar">edit</mat-icon>
               </a>
@@ -73,8 +73,8 @@
     </div>
   </div>
 
-  <button [routerLink]="['/admin-dashboard/administracion/repartidor/agregar']" mat-fab
-    class="float-button primary-color add-button" color="primary" matTooltip="Agregar repartidores">
+  <button [routerLink]="['/admin-dashboard/administracion/usuarios/agregar']" mat-fab
+    class="float-button primary-color add-button" color="primary" matTooltip="Agregar usuarios">
     <mat-icon aria-hidden="false" aria-label="Agregar">add</mat-icon>
   </button>
 </div>
