--- a/Administrador/src/app/management/components/usuarios/usuarios.component.html
+++ b/Administrador/src/app/management/components/usuarios/usuarios.component.html
@@ -3,13 +3,13 @@
     <mat-toolbar-row>
       <span> Usuarios de sistema </span>
       <span class="spacer-toolbar"></span>
-       <!-- <button mat-icon-button aria-label="Limpia filtros grid" (click)="clearFilter()" matTooltip="Limpiar los filtros de busqueda">
+      <!-- <button mat-icon-button aria-label="Limpia filtros grid" (click)="clearFilter()" matTooltip="Limpiar los filtros de busqueda">
             <span class="custom-size-icon-toolbar"><i class="fas fa-brush"></i></span>
         </button> -->
-        <button mat-icon-button aria-label="Actualiza grid" (click)="getUsuarios()" matTooltip="Actualiza datos">
-            <mat-icon>refresh</mat-icon>
-        </button>
-        <!-- <button mat-icon-button aria-label="Exportar excel" (click)="exportDataExcel()" matTooltip="Exportar a excel">
+      <button mat-icon-button aria-label="Actualiza grid" (click)="getUsuarios()" matTooltip="Actualiza datos">
+        <mat-icon>refresh</mat-icon>
+      </button>
+      <!-- <button mat-icon-button aria-label="Exportar excel" (click)="exportDataExcel()" matTooltip="Exportar a excel">
             <span class="custom-size-icon-toolbar"><i class="far fa-file-excel"></i></span>
         </button>  -->
       <!-- <button mat-icon-button aria-label="Ir atr&aacute;s" (click)="goBack()" matTooltip="Regresar a p&aacute;gina anterior">
@@ -28,8 +28,9 @@
         <table mat-table matSort [dataSource]="dataSource">
 
           <ng-container matColumnDef="Fotografia">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header width="8%"  class="text-center"> Fotograf&iacute;a</th>
-            <td mat-cell *matCellDef="let element"> <img class="img-fluid img-thumbnail rounded" src="{{element.Fotografia}}" alt="Imagen perfil conductor"/>  </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header width="8%" class="text-center"> Fotograf&iacute;a</th>
+            <td mat-cell *matCellDef="let element"> <img class="img-fluid img-thumbnail rounded"
+                src="{{element.Fotografia}}" alt="Imagen perfil usuario" /> </td>
           </ng-container>
           <!-- Name Column -->
           <ng-container matColumnDef="Nombre">
@@ -38,8 +39,16 @@
           </ng-container>
 
           <ng-container matColumnDef="Tipo">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </th>
-            <td mat-cell *matCellDef="let element"> {{element.Tipo}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo Usuario</th>
+            <td mat-cell *matCellDef="let element">
+              <p [ngSwitch]="element.Acceso?.TipoUsuario">
+                <span *ngSwitchCase="TipoUsuario.ADMINISTRADOR">Administrador</span>
+                <span *ngSwitchCase="TipoUsuario.CLIENTE">Cliente</span>
+                <span *ngSwitchCase="TipoUsuario.LOCAL">Local</span>
+                <span *ngSwitchCase="TipoUsuario.CONDUCTOR">Conductor</span>
+              </p>
+            </td>
+
           </ng-container>
 
           <ng-container matColumnDef="estatus">
@@ -54,8 +63,7 @@
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef width="10%" class="text-center"> Acciones </th>
             <td mat-cell *matCellDef="let element" class="text-center">
-              <a routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}"
-                [queryParams]="{ to: 'c'}">
+              <a routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}" [queryParams]="{ to: 'c'}">
                 <mat-icon aria-hidden="false" aria-label="Consultar" matTooltip="Consultar">search</mat-icon>
               </a>
               <a *ngIf="element.Estatus" routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}"
