--- a/Administrador/src/app/management/components/repartidor/repartidor.component.html
+++ b/Administrador/src/app/management/components/repartidor/repartidor.component.html
@@ -46,7 +46,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header width="5%" class="text-center"> Activo </th>
             <td mat-cell *matCellDef="let element" class="text-center">
               <mat-slide-toggle [checked]="element.Estatus == 1" color="primary"
-                matTooltip="Activar/desactivar registro" (change)="onChangeEstatus($event, element.IdProducto)">
+                matTooltip="Activar/desactivar registro" (change)="onChangeEstatus($event, element.IdPersona)">
               </mat-slide-toggle>
             </td>
           </ng-container>
