--- a/Administrador/src/app/management/components/usuarios/usuarios.component.html
+++ b/Administrador/src/app/management/components/usuarios/usuarios.component.html
@@ -55,7 +55,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header width="5%" class="text-center"> Activo </th>
             <td mat-cell *matCellDef="let element" class="text-center">
               <mat-slide-toggle [checked]="element.Estatus == 1" color="primary"
-                matTooltip="Activar/desactivar registro" (change)="onChangeEstatus($event, element.IdProducto)">
+                matTooltip="Activar/desactivar registro" (change)="onChangeEstatus($event, element.IdPersona)">
               </mat-slide-toggle>
             </td>
           </ng-container>
@@ -66,7 +66,7 @@
               <a routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}" [queryParams]="{ to: 'c'}">
                 <mat-icon aria-hidden="false" aria-label="Consultar" matTooltip="Consultar">search</mat-icon>
               </a>
-              <a *ngIf="element.Estatus" routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}"
+              <a *ngIf="element.Estatus && element.Acceso?.TipoUsuario != TipoUsuario.CLIENTE" routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}"
                 [queryParams]="{ to: 'e'}">
                 <mat-icon aria-hidden="false" aria-label="Editar" matTooltip="Editar">edit</mat-icon>
               </a>
