upd: Consulta banners

--- a/Administrador/src/app/management/components/menu/menu.component.html
+++ b/Administrador/src/app/management/components/menu/menu.component.html
@@ -24,6 +24,14 @@
               <span>Usuarios</span>
             </a>
           </li>
+
+          <li>
+            <a [routerLink]="['administracion/banners']" [routerLinkActive]="['router-link-active']"
+              matTooltip="Administraci&oacute;n de banners" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
+              <i class="fas fa-bookmark"></i>
+              <span>Banners</span>
+            </a>
+          </li>
           <!-- <li>
             <a [routerLink]="['administracion/productos']" [routerLinkActive]="['router-link-active']"
               matTooltip="Administraci&oacute;n de productos" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
