upd: grid consulta categorias

--- a/Administrador/src/app/management/components/menu/menu.component.html
+++ b/Administrador/src/app/management/components/menu/menu.component.html
@@ -32,6 +32,14 @@
               <span>Banners</span>
             </a>
           </li>
+
+          <li>
+            <a [routerLink]="['administracion/tipo-local']" [routerLinkActive]="['router-link-active']"
+              matTooltip="Administraci&oacute;n de categorias" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
+              <i class="fas fa-project-diagram"></i>
+              <span>Categorias</span>
+            </a>
+          </li>
           <!-- <li>
             <a [routerLink]="['administracion/productos']" [routerLinkActive]="['router-link-active']"
               matTooltip="Administraci&oacute;n de productos" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
