--- a/Administrador/src/app/management/components/tipo-local/tipo-local.component.html
+++ b/Administrador/src/app/management/components/tipo-local/tipo-local.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span> Banners </span>
+      <span> Categorias </span>
       <span class="spacer-toolbar"></span>
       <!-- <button mat-icon-button aria-label="Limpia filtros grid" (click)="clearFilter()" matTooltip="Limpiar los filtros de busqueda">
             <span class="custom-size-icon-toolbar"><i class="fas fa-brush"></i></span>
         </button> -->
-      <button mat-icon-button aria-label="Actualiza grid" (click)="getBanners()" matTooltip="Actualiza datos">
+      <button mat-icon-button aria-label="Actualiza grid" (click)="getCategorias()" matTooltip="Actualiza datos">
         <mat-icon>refresh</mat-icon>
       </button>
       <!-- <button mat-icon-button aria-label="Exportar excel" (click)="exportDataExcel()" matTooltip="Exportar a excel">
@@ -30,7 +30,7 @@
           <ng-container matColumnDef="Fotografia">
             <th mat-header-cell *matHeaderCellDef mat-sort-header width="8%" class="text-center"> Fotograf&iacute;a</th>
             <td mat-cell *matCellDef="let element"> <img class="img-fluid img-thumbnail rounded"
-                src="{{element.Fotografia}}" alt="Imagen banner" /> </td>
+                src="{{element.Fotografia}}" alt="Imagen categoria" /> </td>
           </ng-container>
           <!-- Name Column -->
           <ng-container matColumnDef="Nombre">
@@ -69,8 +69,8 @@
     </div>
   </div>
 
-  <button [routerLink]="['/admin-dashboard/administracion/banners/agregar']" mat-fab
-    class="float-button primary-color add-button" color="primary" matTooltip="Agregar banners">
+  <button [routerLink]="['/admin-dashboard/administracion/tipo-local/agregar']" mat-fab
+    class="float-button primary-color add-button" color="primary" matTooltip="Agregar tipos categorias">
     <mat-icon aria-hidden="false" aria-label="Agregar">add</mat-icon>
   </button>
 </div>
